<resources>
    <string name="app_name">Labor1</string>
    <string name="first_name">First name</string>
    <string name="button_send">Send</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="department">Department</string>
    <string name="num_sign">Number of calls from Profile page </string>
    <string name="num_register">Number of calls from Register</string>
    <string name="back">BACK</string>
    <string name="emptyString">-</string>
</resources>
